Update FacadeCityInfo.java